# Soveryn-Cathedral

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: aetheria-on-hallucination-and-trust.md  agent-stakeholder-collaboration.md
examples/: minimal_flask.py
src/soveryn_cathedral/: __init__.py  socket.py  state.py  summarizer.py
tests/: test_state.py
