[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soveryn-cathedral"
version = "0.1.0"
description = "Continuous identity layer for single-user sovereign AI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jon DeOliveira", email = "jon.deoliveira@gmail.com"},
]
keywords = [
    "ai",
    "llm",
    "sovereign",
    "local-first",
    "identity",
    "memory",
    "agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # core has zero deps — JSON + threading + stdlib only

[project.optional-dependencies]
socket = [
    "flask-socketio>=5.0",
    "flask>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/Soverynintelligence/Soveryn-Cathedral"
Repository = "https://github.com/Soverynintelligence/Soveryn-Cathedral"
Issues = "https://github.com/Soverynintelligence/Soveryn-Cathedral/issues"
SOVERYN = "https://github.com/Soverynintelligence/SOVERYNIntelligence-"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
soveryn_cathedral = ["py.typed"]
